-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b53
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8026089 | 8 | Bengt Rutisson | P4 | Resolved | Fixed | b111 |
When running G1 with -XX:+PrintAdaptiveSizePolicy some information about the heap sizing is logged. When the heap is fully expanded but the ergonomics would have liked to expand even more the following message is logged:
[G1Ergonomics (Heap Sizing) did not expand the heap, reason: heap expansion operation failed]
It sounds like something failed, but in reality we just hit the -Xmx value. We should have a more informative message that does not look like a serious failure.
[G1Ergonomics (Heap Sizing) did not expand the heap, reason: heap expansion operation failed]
It sounds like something failed, but in reality we just hit the -Xmx value. We should have a more informative message that does not look like a serious failure.
- backported by
-
JDK-8026089 G1: Heap expansion logging misleading for fully expanded heap
-
- Resolved
-
- duplicates
-
JDK-8025674 Re-wording of log message
-
- Closed
-
-
JDK-8025674 Re-wording of log message
-
- Closed
-