8025605: G1: Heap expansion logging misleading for fully expanded heap

Reviewed-by: tschatzl, jwilhelm, jmasa